[package]
name = "habit_tracker"
version = "0.1.0"
authors = ["SamuelLorrain <samuel.lorrain@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
num-traits = "0.2"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "=1.0.44" # otherwise, unable to compile ?
regex = "1"
